package(default_visibility = ["//visibility:public"])
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

test_suite(
    name = "all_tests",
    tests = [
        "//scheduler:all_tests",
        "//submitter:all_tests",
        "//worker:all_tests",
    ],
)

sh_binary(
    name = "publish_images",
    srcs = ["tools/ci/publish_images.sh"],
)

