load("@gazelle//:def.bzl", "gazelle")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

package(default_visibility = ["//visibility:public"])

test_suite(
    name = "all_tests",
    tests = [
        "//mock-data-services/mock-data-service:all_tests",
        "//mock-data-services/mock-listener-service:all_tests",
        "//scheduler:all_tests",
        "//submitter:all_tests",
        "//worker:all_tests",
    ],
)

sh_binary(
    name = "publish_images",
    srcs = ["tools/ci/publish_images.sh"],
)

# gazelle:prefix asadyezdanschool/conductor
# gazelle:exclude infra
gazelle(name = "gazelle")
