# Go
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.42.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    name = "go_sdk",
    version = "1.26.0",
)
use_repo(go_sdk, "go_sdk")

register_toolchains("@go_sdk//:all")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//worker:go.mod")
## keep: bazel mod tidy removes these but they are needed by worker/BUILD.bazel
use_repo(
    go_deps,
    "com_github_aws_aws_sdk_go_v2_config",
    "com_github_aws_aws_sdk_go_v2_service_sqs",
    ## keep
    "com_github_lib_pq",
)

# Java
bazel_dep(name = "rules_java", version = "9.0.3")
bazel_dep(name = "rules_jvm_external", version = "6.8")

# Core deps — must come before extensions that use them
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "rules_shell", version = "0.5.1")

# OCI extension — must come AFTER rules_oci bazel_dep
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "temurin25_jre",
    digest = "sha256:0611ca158a2497b7ed6c2594a06fe88aa234401af0a43495f084ba1e986eba50",
    image = "docker.io/library/eclipse-temurin",
    platforms = ["linux/amd64"],
    tag = "25-jre-alpine",
)
oci.pull(
    name = "distroless_base",
    digest = "sha256:1301f00c0a86316c008138772c4fabf2d904c27de31cf04fe60811d94b4dff21",
    image = "gcr.io/distroless/base",
    platforms = ["linux/amd64"],
)
oci.pull(
    name = "liquibase",
    digest = "sha256:f1dbd6a536ea2898909a6449bbc8d2c54aa6057c4eb81dfbaec2b7a04c08236e",
    image = "docker.io/liquibase/liquibase",
    platforms = ["linux/amd64"],
    tag = "5.0.2",
)
use_repo(oci, "distroless_base", "distroless_base_linux_amd64", "liquibase", "liquibase_linux_amd64", "temurin25_jre", "temurin25_jre_linux_amd64")

# Maven dependencies for Java testing
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        # Existing
        "org.junit.jupiter:junit-jupiter-api:5.12.1",
        "org.junit.platform:junit-platform-console-standalone:1.12.1",
        "software.amazon.awssdk:sqs:2.31.28",
        "software.amazon.awssdk:url-connection-client:2.31.28",
        "org.postgresql:postgresql:42.7.3",

        # Jersey 3.x (jakarta.ws.rs) with JDK HTTP server container (supports virtual threads)
        "org.glassfish.jersey.core:jersey-server:3.1.11",
        "org.glassfish.jersey.containers:jersey-container-jdk-http:3.1.11",
        "org.glassfish.jersey.inject:jersey-hk2:3.1.11",
        "org.glassfish.jersey.media:jersey-media-json-jackson:3.1.11",
        "jakarta.ws.rs:jakarta.ws.rs-api:3.1.0",

        # Jackson
        "com.fasterxml.jackson.core:jackson-core:2.15.4",
        "com.fasterxml.jackson.core:jackson-databind:2.15.4",
        "com.fasterxml.jackson.core:jackson-annotations:2.15.4",
        "com.fasterxml.jackson.module:jackson-module-parameter-names:2.15.4",

        # HikariCP connection pool
        "com.zaxxer:HikariCP:5.1.0",

        # Dagger 2 DI
        "com.google.dagger:dagger:2.51.1",
        "com.google.dagger:dagger-compiler:2.51.1",
        "javax.inject:javax.inject:1",

        # JUnit 5 extras
        "org.junit.jupiter:junit-jupiter-engine:5.12.1",
        "org.junit.jupiter:junit-jupiter-params:5.12.1",

        # Mockito
        "org.mockito:mockito-core:5.11.0",

        # Testcontainers
        "org.testcontainers:testcontainers:1.20.4",
        "org.testcontainers:postgresql:1.20.4",

        # REST Assured
        "io.rest-assured:rest-assured:5.4.0",
        "org.hamcrest:hamcrest:2.2",

        # Liquibase Java API (for integration test migrations)
        "org.liquibase:liquibase-core:4.27.0",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
