load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")

package(default_visibility = ["//visibility:public"])

genrule(
    name = "migrations_tar",
    srcs = glob(["changelog/**"]),
    outs = ["migrations.tar"],
    cmd = """
        mkdir -p $(RULEDIR)/staging/liquibase/changelog && \
        for f in $(SRCS); do cp $$f $(RULEDIR)/staging/liquibase/changelog/; done && \
        tar -cf $@ -C $(RULEDIR)/staging . && \
        rm -rf $(RULEDIR)/staging
    """,
)

genrule(
    name = "driver_tar",
    srcs = ["@maven//:org_postgresql_postgresql"],
    outs = ["driver.tar"],
    cmd = """
        mkdir -p $(RULEDIR)/driver_staging/liquibase/lib && \
        cp $(SRCS) $(RULEDIR)/driver_staging/liquibase/lib/postgresql.jar && \
        tar -cf $@ -C $(RULEDIR)/driver_staging . && \
        rm -rf $(RULEDIR)/driver_staging
    """,
)

oci_image(
    name = "migrations_image",
    base = "@liquibase",
    cmd = ["update"],
    tars = [
        ":migrations_tar",
        ":driver_tar",
    ],
)

oci_load(
    name = "migrations_load",
    image = ":migrations_image",
    repo_tags = ["conductor/liquibase-migrations:dummy"],
)

oci_push(
    name = "publish_image",
    image = ":migrations_image",
    repository = "public.ecr.aws/a9s2p1s8/conductor/liquibase-migrations",
)
