load("@rules_java//java:defs.bzl", "java_binary", "java_library", "java_test")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "scheduler_lib",
    srcs = glob(["src/main/java/com/github/asadyezdanschool/conductor/scheduler/*.java"]),
    deps = [
        "@maven//:org_postgresql_postgresql",
        "@maven//:software_amazon_awssdk_sqs",
        "@maven//:software_amazon_awssdk_url_connection_client",
    ],
)

java_binary(
    name = "Scheduler",
    main_class = "com.github.asadyezdanschool.conductor.scheduler.Main",
    runtime_deps = [":scheduler_lib"],
)

java_test(
    name = "scheduler_test",
    srcs = glob(["src/test/java/com/github/asadyezdanschool/conductor/scheduler/*Test.java"]),
    args = [
        "--disable-banner",
        "--scan-classpath",
        "--include-classname=.*Test",
    ],
    main_class = "org.junit.platform.console.ConsoleLauncher",
    use_testrunner = False,
    runtime_deps = [
        "@maven//:org_junit_platform_junit_platform_console_standalone",
    ],
    deps = [
        ":scheduler_lib",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
    ],
)

test_suite(
    name = "all_tests",
    tests = [":scheduler_test"],
)

pkg_tar(
    name = "scheduler_layer",
    srcs = [":Scheduler_deploy.jar"],
    package_dir = "/app",
)

oci_image(
    name = "scheduler_image",
    base = "@temurin25_jre",
    entrypoint = [
        "java",
        "-jar",
        "/app/Scheduler_deploy.jar",
    ],
    tars = [":scheduler_layer"],
)

oci_load(
    name = "scheduler_load",
    image = ":scheduler_image",
    repo_tags = ["conductor/scheduler:dummy"],
)

oci_push(
    name = "publish_image",
    image = ":scheduler_image",
    repository = "public.ecr.aws/a9s2p1s8/conductor/scheduler",
)
