load("@rules_java//java:defs.bzl", "java_binary", "java_library", "java_test")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "submitter_lib",
    srcs = glob(["src/main/java/com/github/asadyezdanschool/conductor/submitter/*.java"]),
)

java_binary(
    name = "Submitter",
    main_class = "com.github.asadyezdanschool.conductor.submitter.Main",
    runtime_deps = [":submitter_lib"],
)

java_test(
    name = "submitter_test",
    srcs = glob(["src/test/java/com/github/asadyezdanschool/conductor/submitter/*Test.java"]),
    args = [
        "--disable-banner",
        "--scan-classpath",
        "--include-classname=.*Test",
    ],
    main_class = "org.junit.platform.console.ConsoleLauncher",
    use_testrunner = False,
    runtime_deps = [
        "@maven//:org_junit_platform_junit_platform_console_standalone",
    ],
    deps = [
        ":submitter_lib",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
    ],
)

test_suite(
    name = "all_tests",
    tests = [":submitter_test"],
)

pkg_tar(
    name = "submitter_layer",
    srcs = [":Submitter_deploy.jar"],
    package_dir = "/app",
)

oci_image(
    name = "submitter_image",
    base = "@temurin25_jre",
    entrypoint = [
        "java",
        "-jar",
        "/app/Submitter_deploy.jar",
    ],
    tars = [":submitter_layer"],
)

oci_load(
    name = "submitter_load",
    image = ":submitter_image",
    repo_tags = ["conductor/submitter:dummy"],
)

oci_push(
    name = "publish_image",
    image = ":submitter_image",
    repository = "public.ecr.aws/a9s2p1s8/conductor/submitter",
)
