load("@rules_go//go:def.bzl", "go_binary")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")

go_binary(
    name = "Worker",
    srcs = ["hello.go"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",  # static binary, no CGO — required for distroless/base
)

pkg_tar(
    name = "worker_layer",
    srcs = [":Worker"],
    package_dir = "/app",
)

oci_image(
    name = "worker_image",
    base = "@distroless_base",
    tars = [":worker_layer"],
    entrypoint = ["/app/Worker"],
)

oci_load(
    name = "worker_load",
    image = ":worker_image",
    repo_tags = ["worker:latest"],
)