load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load","oci_push")

go_library(
    name = "worker_lib",
    srcs = ["hello.go"],
    importpath = "asadyezdanschool/conductor/worker",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "Worker",
    embed = [":worker_lib"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",  # static binary, no CGO — required for distroless/base
)

go_test(
    name = "worker_test",
    srcs = ["hello_test.go"],
    embed = [":worker_lib"],
)

test_suite(
    name = "all_tests",
    tests = [":worker_test"],
)

pkg_tar(
    name = "worker_layer",
    srcs = [":Worker"],
    package_dir = "/app",
)

oci_image(
    name = "worker_image",
    base = "@distroless_base",
    tars = [":worker_layer"],
    entrypoint = ["/app/Worker"],
)

oci_load(
    name = "worker_load",
    image = ":worker_image",
    repo_tags = ["conductor-worker:latest"],
)

oci_push(
    name = "publish_image",
    image = ":worker_image",
    repository = "index.docker.io/redocktunetes/conductor-worker",
    remote_tags = ["latest"]
)
