load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

go_library(
    name = "worker_lib",
    srcs = ["hello.go"],
    importpath = "asadyezdanschool/conductor/worker",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_aws_aws_sdk_go_v2_config//:go_default_library",
        "@com_github_aws_aws_sdk_go_v2_service_sqs//:go_default_library",
        "@com_github_lib_pq//:go_default_library",
    ],
)

go_binary(
    name = "Worker",
    embed = [":worker_lib"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",  # static binary, no CGO — required for distroless/base
    visibility = ["//visibility:public"],
)

go_test(
    name = "worker_test",
    srcs = [],
    embed = [":worker_lib"],
)

test_suite(
    name = "all_tests",
    tests = [":worker_test"],
)

pkg_tar(
    name = "worker_layer",
    srcs = [":Worker"],
    package_dir = "/app",
)

oci_image(
    name = "worker_image",
    base = "@distroless_base",
    entrypoint = ["/app/Worker"],
    tars = [":worker_layer"],
)

oci_load(
    name = "worker_load",
    image = ":worker_image",
    repo_tags = ["conductor/worker:dummy"],
)

oci_push(
    name = "publish_image",
    image = ":worker_image",
    repository = "public.ecr.aws/a9s2p1s8/conductor/worker",
)
