load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["scheduler_client.go"],
    importpath = "asadyezdanschool/conductor/worker/client",
    visibility = ["//visibility:public"],
    deps = [
        "//worker/gen/execution:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure:go_default_library",
    ],
)
